<resources>
    <string name="app_name">finance</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="create">新增</string>
    <string name="date">"日期: "</string>
    <string name="select">"选择"</string>
    <string name="info">"备注: "</string>
    <string name="save">"保存"</string>
    <string name="cancel">"取消"</string>
    <string name="amount">"金额: "</string>
    <string name="type">"类型: "</string>
    <string name="left">"《"</string>
    <string name="right">"》"</string>
    <string name="export">"导出"</string>
    <string name="inport">"导入"</string>
    <string name="deletebackup">"删除备份"</string>
    <string name="uploadbackup">"上传备份"</string>
    <string name="remoteexport">"远程导入"</string>
    <string name="setftp">"ftp设置"</string>
    <string name="exchange">"转换"</string>
    <string name="loginfo">"日志: "</string>
    <string name="ftpserverip">"服务器地址: "</string>
    <string name="morning">"早: "</string>
    <string name="noon">"中: "</string>
    <string name="night">"晚: "</string>
    <string name="rope">"跳绳: "</string>
    <string name="circle">"跑圈: "</string>
    <string name="notefiance">"记录"</string>
    <string name="statsfiance">"统计"</string>
    <string name="serverip">"服务器ip"</string>
    <string name="serverport">"服务器端口"</string>
    <string name="usr">"用户名"</string>
    <string name="passwd">"密码"</string>
    <string name="serverroot">"服务器根目录"</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>